--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ li:hover{
 #listRoutesAB {
 	background-color: white;
 	opacity: 0.85;
-	padding: 10px;
+	padding: 10px 0 10px 14px;
 	overflow-y:auto;
-	width:450px;
+	width:430px;
 	height: calc(100vh - 70px);
 	position: absolute;
 	top:20px;
@@ -68,7 +68,7 @@ li:hover{
   	<div id="map"></div>
 </body>
 <script src="spin.min.js"></script>
-<script async src="script.js"></script>
+<script src="script.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQRf2VyhBue5q0ROj93g0Nx36NXyL5i2U&callback=initMap">
 </script>
 </html>
