--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	margin:0;
 }
 h1 {position: relative;
-	top:13%;
+	top:10%;
+	margin-right:14px;
 	color: #D62929;
 	text-align: center;
 	text-shadow: inset 0 0 10px rgba(0,0,0,.3);
@@ -24,15 +25,16 @@ li {text-align: center;
 	display:block;
 	cursor: pointer;
 	border-radius: 10px;
+	margin: 2px 0 2px 0 ;
 }
 #listRoutesAB::-webkit-scrollbar
-{	height: 400px;
+{	
 	width: 14px;
 }
 #listRoutesAB::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #D62929;
 }
 li:hover{
@@ -41,13 +43,13 @@ li:hover{
 #listRoutesAB {
 	background-color: white;
 	opacity: 0.85;
-	padding: 10px 0 10px 14px;
+	padding: 10px 0 10px 10px;
 	overflow-y:auto;
-	width:430px;
-	height: calc(100vh - 70px);
+	width:400px;
+	height: calc(100vh - 130px);
 	position: absolute;
-	top:20px;
-	left:20px;
+	top:50px;
+	left:50px;
 	z-index: 1;
 	border: 3px solid #D62929;
 	border-radius: 10px;
