--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ li {text-align: center;
 	display:block;
 	cursor: pointer;
 	border-radius: 10px;
-	margin: 2px 0 2px 0 ;
+	margin: 2px 10px 2px 0 ;
 }
 #listRoutesAB::-webkit-scrollbar
 {	
